--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
         <activity android:name=".Users.Controllers.LoginActivity" />
         <activity android:name=".Controllers.MainActivity" />
         <activity android:name=".Users.Controllers.RegisterActivity" />
+        <activity
+            android:name=".Shelters.Controllers.ShelterListActivity"
+            android:label="@string/title_activity_shelter_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Shelters.Controllers.ShelterDetailActivity"
+            android:label="@string/title_activity_shelter_detail"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
