Added search by name methods and gender and age searches

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         <activity
             android:name=".Shelters.Controllers.ShelterDetailActivity"
             android:label="@string/title_activity_shelter_detail"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Shelters.Controllers.SearchActivity"
+            android:label="@string/title_activity_search"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
