SearchActivity has widgets for all three search categories

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <activity
             android:name=".Shelters.Controllers.SearchActivity"
             android:label="@string/title_activity_search"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Shelters.Controllers.FilteredSheltersActivity"
+            android:label="@string/title_activity_filtered_shelters"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
