Got rid of errors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="edu.gatech.cs2340.hkskh">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -17,28 +18,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controllers.WelcomeActivity">
+        <activity android:name=".Controllers.WelcomeActivity"
+            tools:ignore="InnerclassSeparator">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Users.Controllers.LoginActivity" />
-        <activity android:name=".Controllers.MainActivity" />
-        <activity android:name=".Users.Controllers.RegisterActivity" />
+        <activity android:name=".Users.Controllers.LoginActivity"
+            tools:ignore="InnerclassSeparator" />
+        <activity android:name=".Controllers.MainActivity"
+            tools:ignore="InnerclassSeparator" />
+        <activity android:name=".Users.Controllers.RegisterActivity"
+            tools:ignore="InnerclassSeparator" />
         <activity
             android:name=".Shelters.Controllers.ShelterListActivity"
             android:label="@string/title_activity_shelter_list"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="InnerclassSeparator" />
         <activity
             android:name=".Shelters.Controllers.ShelterDetailActivity"
             android:label="@string/title_activity_shelter_detail"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="InnerclassSeparator" />
         <activity
             android:name=".Shelters.Controllers.SearchActivity"
             android:label="@string/title_activity_search"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="InnerclassSeparator" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -55,7 +63,8 @@
 
         <activity
             android:name=".Shelters.Controllers.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps"
+            tools:ignore="InnerclassSeparator"></activity>
     </application>
 
 </manifest>
