--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.android.gms:play-services-maps:12.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.opencsv:opencsv:4.1'
+    implementation 'com.opencsv:opencsv:4.1'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
     // ViewModel and LiveData
     implementation 'android.arch.lifecycle:extensions:1.1.0'
@@ -46,6 +46,6 @@ dependencies {
     testImplementation 'android.arch.core:core-testing:1.1.0'
     // Test helpers for Room
     testImplementation 'android.arch.persistence.room:testing:1.0.0'
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 }
